--- a/src/Pages/SingleVideoPage/SingleVideoPage.css
+++ b/src/Pages/SingleVideoPage/SingleVideoPage.css
@@ -22,11 +22,6 @@
   display: none;
 }
 
-.video-container iframe {
-  width: 100%;
-  height: 25rem;
-}
-
 .video-container .add-notes {
   position: relative;
 }
@@ -43,6 +38,9 @@
   height: 10rem;
 }
 
+.single-video-option .mar-right-auto {
+  margin-right: auto;
+}
 @media only screen and (max-width: 850px) {
   .single-video-body {
     grid-template-columns: 1fr;
@@ -73,5 +71,9 @@
     justify-content: center;
     align-items: center;
     overflow-y: unset;
+  }
+
+  .single-video-option .mar-right-auto {
+    margin-right: auto;
   }
 }
