--- a/src/Components/Videocard/Videocard.css
+++ b/src/Components/Videocard/Videocard.css
@@ -7,6 +7,7 @@
   width: 18rem;
   border: 2px solid var(--theme-color);
   border-radius: 10px;
+  position: relative;
 }
 
 .video-card .img-container {
@@ -40,4 +41,18 @@
   width: 30px;
   height: 30px;
   border-radius: 50%;
+}
+
+.video-card .video-card-options-list {
+  position: absolute;
+  width: 80%;
+  border: 2px solid;
+  bottom: 20px;
+  left: 22px;
+  background-color: var(--text-color);
+  color: white;
+}
+
+.video-card .video-card-options-list ul {
+  list-style: none;
 }
