--- a/src/Pages/Explore/Explore.css
+++ b/src/Pages/Explore/Explore.css
@@ -25,3 +25,19 @@
 .filter-item.active {
   background-color: var(--dark-dark-color);
 }
+
+.flex-center-videos {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+@media only screen and (max-width: 700px) {
+  .flex-center-videos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+}
